--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "iradessolt-website",
+  "homepage": "https://limestoneguy.github.io/iradessolt-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@react-three/drei": "^7.4.0",
+    "@react-three/fiber": "^7.0.6",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -22,6 +25,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-scripts": "4.0.3",
     "rxjs": "^7.3.0",
+    "three": "^0.131.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -29,7 +33,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +56,9 @@
     ]
   },
   "devDependencies": {
+    "@types/three": "^0.131.0",
     "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
